Update Choosing Template page

--- a/Demo/Views/Homepage/ChoosingTemplate.cshtml
+++ b/Demo/Views/Homepage/ChoosingTemplate.cshtml
@@ -1,16 +1,59 @@
-﻿<div class="row">
+﻿<div class="row container-fluid">
     <div class="col-1">
-        <div class="d-flex justify-content-center align-items-center w-100 h-100">
-            Home
-        </div>
-        <div class="d-flex justify-content-center align-items-center w-100 h-100">
-            New
-        </div>
-        <div class="d-flex justify-content-center align-items-center w-100 h-100">
-            Open
+        <div class="col-12">
+            <div class="d-flex justify-content-center align-items-center w-100 h-100">
+                <i class="bi bi-house"></i>
+                <p>Home</p>
+            </div>
+            <div class="d-flex justify-content-center align-items-center w-100 h-100">
+                <i class="bi bi-files"></i>
+                <p>New</p>
+            </div>
+            <div class="d-flex justify-content-center align-items-center w-100 h-100">
+                <i class="bi bi-folder"></i>
+                <p>Open</p>
+            </div>
         </div>
     </div>
-    <div class="coll-11">
-        Demo
+    <div class="col-11">
+        <h5>Welcome</h5>
+        <div class="row">
+            <div class="col-2">
+                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <p class="text-center">Template 1</p>
+            </div>
+            <div class="col-2">
+                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <p class="text-center">Template 2</p>
+            </div>
+            <div class="col-2">
+                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <p class="text-center">Template 3</p>
+            </div>
+            <div class="col-2">
+                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <p class="text-center">Template 4</p>
+            </div>
+            <div class="col-2">
+                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <p class="text-center">Template 5</p>
+            </div>
+            <div class="col-2">
+                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <p class="text-center">Template 6</p>
+            </div>
+            <div class="col-12"><hr /></div>
+            <div class="col-12"><p class="float-right">More themes</p></div>
+            <div class="col-12">
+                <div class="input-group ">
+                    <div class="form-outline">
+                        <input type="search" id="form1" class="form-control" placeholder="Search"/>  
+                    </div>
+                    <button type="button" class="btn btn-primary">
+                        <i class="bi bi-search"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
