--- a/Demo/Views/Homepage/ChoosingTemplate.cshtml
+++ b/Demo/Views/Homepage/ChoosingTemplate.cshtml
@@ -19,27 +19,39 @@
         <h5>Welcome</h5>
         <div class="row">
             <div class="col-2">
-                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <button data-toggle="modal" data-target="#showModal" class="w-100 border-0">
+                    <img src="https://wallpapercave.com/dwp1x/wp4033162.jpg" class="w-100" height="100px">
+                </button>
                 <p class="text-center">Template 1</p>
             </div>
             <div class="col-2">
-                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <button data-toggle="modal" data-target="#showModal" class="w-100 border-0">
+                    <img src="https://wallpapercave.com/dwp1x/wp4033170.jpg" class="w-100" height="100px">
+                </button>
                 <p class="text-center">Template 2</p>
             </div>
             <div class="col-2">
-                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <button data-toggle="modal" data-target="#showModal" class="w-100 border-0">
+                    <img src="https://wallpapercave.com/dwp1x/wp4033182.jpg" class="w-100" height="100px">
+                </button>
                 <p class="text-center">Template 3</p>
             </div>
             <div class="col-2">
-                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <button data-toggle="modal" data-target="#showModal" class="w-100 border-0">
+                    <img src="https://getwallpapers.com/wallpaper/full/8/5/9/184657.jpg" class="w-100" height="100px">
+                </button>
                 <p class="text-center">Template 4</p>
             </div>
             <div class="col-2">
-                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <button data-toggle="modal" data-target="#showModal" class="w-100 border-0">
+                    <img src="https://getwallpapers.com/wallpaper/full/6/6/7/184805.jpg" class="w-100" height="100px">
+                </button>
                 <p class="text-center">Template 5</p>
             </div>
             <div class="col-2">
-                <img src="https://bom.so/bGSWUS" / class="col-12">
+                <button data-toggle="modal" data-target="#showModal" class="w-100 border-0">
+                    <img src="https://getwallpapers.com/wallpaper/full/e/5/b/184912.jpg" class="w-100" height="100px">
+                </button>
                 <p class="text-center">Template 6</p>
             </div>
             <div class="col-12"><hr /></div>
@@ -53,6 +65,29 @@
                         <i class="bi bi-search"></i>
                     </button>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
