--- a/Demo/Views/Homepage/ChoosingTemplate.cshtml
+++ b/Demo/Views/Homepage/ChoosingTemplate.cshtml
@@ -59,12 +59,13 @@
             <div class="col-12"><p class="float-right">More themes</p></div>
             <div class="col-12">
                 <div class="input-group ">
-                    <div class="form-outline">
-                        <input type="search" id="output" class="form-control" placeholder="Search"/>  
+                     <div class="form-outline">
+                        <input type="search" id="search" class="form-control" placeholder="Search" style="width:300px;"/>  
                     </div>
                     <button type="button" class="btn btn-primary" onclick="runSpeechRecognition()">
-                        <i class="bi bi-search"></i> <span id="action"></span></p>
+                       <i class="fas fa-microphone"></i> 
                     </button>
+                    <span style="margin-left:20px; margin-top:5px;" id="action"></span>
                 </div>
             </div>
         </div>
@@ -97,29 +98,30 @@
 			/* JS comes here */
 		    function runSpeechRecognition() {
 		        // get output div reference
+                document.getElementById("search").setAttribute('value',"");
 		        var output = document.getElementById("output");
 		        // get action element reference
 		        var action = document.getElementById("action");
+                var sea = document.getElementById("sea");
                 // new speech recognition object
                 var SpeechRecognition = SpeechRecognition || webkitSpeechRecognition;
                 var recognition = new SpeechRecognition();
             
                 // This runs when the speech recognition service starts
                 recognition.onstart = function() {
-                    action.innerHTML = "<small>listening, please speak...</small>";
+                    action.innerHTML = "<span>Hãy nói....</span>";
                 };
                 
                 recognition.onspeechend = function() {
-                    action.innerHTML = "<small>stopped listening, hope you are done...</small>";
+                    action.innerHTML = "<span>Đã hoàn thành</span>";
                     recognition.stop();
                 }
               
                 // This runs when the speech recognition service returns result
                 recognition.onresult = function(event) {
                     var transcript = event.results[0][0].transcript;
-                    var confidence = event.results[0][0].confidence;
-                    output.innerHTML = ""+ transcript + "";
-                    output.classList.remove("hide");
+                    var confidence = event.results[0][0].confidence; 
+                    document.getElementById("search").setAttribute('value',""+transcript+"");
                 };
               
                  // start recognition
