--- a/ProjectWeb/Views/Shared/_Layout.cshtml
+++ b/ProjectWeb/Views/Shared/_Layout.cshtml
@@ -9,8 +9,16 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <style>
         .hide {
-			    display:none;
-			}
+            display: none;
+        }
+
+        .templ:hover {
+            border: 1px solid black;
+            background-color: ghostwhite;
+            cursor: pointer;
+            border-radius: 5px;
+            zoom: 1.05;
+        }
     </style>
 </head>
 <body>
