--- a/ProjectWeb/Views/Homepage/Index.cshtml
+++ b/ProjectWeb/Views/Homepage/Index.cshtml
@@ -76,7 +76,7 @@
                         }
                     </div>
                     <div class="my-2">
-                        <button class="btn btn-primary container-fluid">Thêm mới</button>
+                        <a asp-action="ChoosingTemplate" asp-controller="Homepage" class="btn btn-primary container-fluid">Thêm mới</a>
                     </div>
                 </div>
             </div>
